# up-py-rs

./: 404.html  Cargo.toml  README.md  example.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_zenoh_pubsub.py  up_py.pyi
.github/: copilot-instructions.md
.github/workflows/: CI.yml  test.yml
api/: index.html
docs/: api.md  index.md  installation.md  usage.md
examples/: simple_notify.py  simple_publisher.py  simple_zenoh_publisher.py  simple_zenoh_subscriber.py
installation/: index.html
search/: search_index.json
src/: communication.rs  lib.rs  local_transport.rs  ustatus.rs  zenoh_transport.rs
tests/: test_notifier.py  test_simple_publisher.py  test_zenoh_transport.py
up_py_rs/: __init__.py  __init__.pyi  communication.py  communication.pyi  local_transport.py  local_transport.pyi  zenoh_transport.py  zenoh_transport.pyi
usage/: index.html
