[package]
name = "up-py-rs"
version = "0.1.1"
edition = "2024"
description = "It provides UProtocol binding to use in Python. It is built using Maturin and Pyo3"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "up_py_rs"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.89"
protobuf = "3.7.2"
pyo3 = { version = "0.20.2", features = ["abi3-py312", "abi3-py38", "extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
tokio = { version = "1.49.0", features = ["full"] }
up-rust = { version = "0.9.0", features = ["communication", "tokio", "util"] }
up-transport-zenoh = { version = "0.9.0", optional = true }

[features]
default = ["usubscription", "cloudevents", "udiscovery", "utwin"]
# Transport protocols (optional)
zenoh = ["up-transport-zenoh"]
mqtt = []  # TODO: Add MQTT transport dependency when available
# Core features
usubscription = ["up-rust/usubscription"]
cloudevents = ["up-rust/cloudevents"]
udiscovery = ["up-rust/udiscovery"]
utwin = ["up-rust/utwin"]
symphony = ["up-rust/symphony"]
# Transports bundle - include all transport protocols
all-transports = ["zenoh", "mqtt"]
# Complete bundle - everything
all = ["default", "all-transports", "symphony"]
test-util = ["up-rust/mockall", "up-rust/test-util"]

