[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "up-py-rs"
requires-python = ">=3.8"
description = "Python bindings for Eclipse uProtocol Rust implementation"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "sachinkum0009" },
]
keywords = ["uprotocol", "automotive", "iot", "communication", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]
dynamic = ["version"]
dependencies = []

[project.urls]
Homepage = "https://github.com/sachinkum0009/up-py-rs"
Documentation = "https://github.com/sachinkum0009/up-py-rs#readme"
Repository = "https://github.com/sachinkum0009/up-py-rs"
Issues = "https://github.com/sachinkum0009/up-py-rs/issues"
Changelog = "https://github.com/sachinkum0009/up-py-rs/releases"

[project.optional-dependencies]
# Transport implementations
zenoh = []  # Zenoh network transport (requires up-transport-zenoh-rust)
mqtt = []   # MQTT transport (future)
someip = [] # SOME/IP automotive protocol (future)

# Feature extensions
discovery = []     # Service discovery (udiscovery feature)
subscription = []  # Advanced subscription management (usubscription feature)
twin = []          # Digital twin support (utwin feature)
cloudevents = []   # CloudEvents format support

# Convenience bundles
all = [
    "up-py-rs[zenoh]",
    "up-py-rs[discovery]",
    "up-py-rs[subscription]",
    "up-py-rs[twin]",
    "up-py-rs[cloudevents]",
]
test = []  # Testing utilities (mockall, test-util features)

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "pytest>=8.3.5",
]
